# hko-bot

./: .gitignore  Cargo.toml  hko_bot.service  rustfmt.toml
src/: answer.rs  args.rs  config.rs  database.rs  http.rs  macros.rs  main.rs  statics.rs  telegram.rs  trigger.rs  weather.rs
src/answer/: briefing.rs  bulletin.rs  forecast.rs  macros.rs  mod.rs  setlang.rs  warning.rs
src/database/entities/: chat.rs  mod.rs
src/database/types/: lang.rs  mod.rs
src/telegram/: callback.rs  command.rs  inlineq.rs  misc.rs
src/telegram/callback/: setlang.rs
src/telegram/command/: briefing.rs  bulletin.rs  forecast.rs  help.rs  macros.rs  purge.rs  setlang.rs  settings.rs  start.rs  warning.rs
src/tool/: data.rs  ext.rs  macros.rs  mix_strings.rs  mod.rs  try_wait.rs
src/tool/types/: bilingual.rs  bilingual_string.rs  mod.rs
src/weather/: briefing.rs  bulletin.rs  forecast.rs  macros.rs  warning.rs
