[package]
edition = "2021"
name = "hko-bot"
version = "0.1.0"

[dependencies]
atty = "0.2"
chrono = "^0.4"
env_logger = {version = "0.11", default-features = false, features = ["auto-color", "humantime"]}
hko = {version = "^1.11", features = ["fetch"]}
lazy_static = "^1"
log = "0.4"
num-traits = "0.2"
paste = "^1"
sqlx = {version = "^0.7", features = ["chrono", "macros", "postgres", "runtime-tokio-native-tls"], default-features = false}
strum = {version = ">=0.24", features = ["derive"]}
teloxide = {version = "0.12", features = ["macros"]}
tokio = {version = "^1", features = ["macros", "rt-multi-thread", "signal"]}

[profile.release]
lto = "thin"
strip = "symbols"
