[package]
edition = "2024"
name = "hko-bot"
version = "0.1.0"

[dependencies]
chrono = "0.4"
hko = { version = "1.13", features = ["fetch"] }
log = "0.4"
paste = "1"
strum = { version = ">=0.24", features = ["derive"] }
syslog = "7"
webpki-roots = "1"

[dependencies.env_logger]
version = "0.11"
default-features = false
features = ["auto-color", "humantime"]

[dependencies.reqwest]
default-features = false
features = ["charset", "http2", "rustls"]
version = "0.13"

[dependencies.sqlx]
default-features = false
features = [
    "chrono",
    "derive",
    "postgres",
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
]
version = "0.8"

[dependencies.teloxide]
default-features = false
features = ["ctrlc_handler", "macros"]
path = "../teloxide/crates/teloxide"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "signal"]
version = "1"

[profile.release]
lto = "thin"
strip = "symbols"
